--- a/.github/workflows/srb.yml
+++ b/.github/workflows/srb.yml
@@ -6,43 +6,40 @@ on:
 jobs:
   run-srb:
     runs-on: ubuntu-latest
-    timeout-minutes: 60  # 필요시 조정
+    timeout-minutes: 60
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # R 설치
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.3.2'
+          r-version: '4.3.2'   # 필요 시 다른 버전으로 변경
 
-      # (선택) 패키지 캐시 + 의존 패키지 설치
-      # SexRatioBirth.R에서 사용하는 패키지를 미리 깔아 실행 시간을 줄입니다.
+      # 패키지 설치 (캐시 활용). Suggests(=Rmpi 등) 설치를 막아서 빌드 오류 방지
       - name: Install R package dependencies (cached)
         uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          # 필요한 패키지를 자유롭게 추가/제거하세요.
+          # 실제 사용하는 패키지만 적으세요. snowfall가 꼭 필요 없으면 빼는 걸 권장.
           extra-packages: |
-            snowfall
             future.apply
             matrixStats
             data.table
             qs
+          dependencies: "hard"   # Suggests 미설치
           cache-version: 1
+        env:
+          PAK_INSTALL_SUGGESTS: "false"
 
-      # 스크립트 실행
       - name: Run SexRatioBirth.R
         run: |
           Rscript SexRatioBirth.R
         env:
-          # 필요시 환경변수로 파라미터를 주입하도록 SexRatioBirth.R에 처리해두면 편리합니다.
-          # 예: NSIM: "1000"
-          # 아래 줄은 예시이므로 기본값 그대로 두셔도 됩니다.
+          # 필요시 시뮬 파라미터를 환경변수로 전달해서 스크립트에서 읽게 할 수 있어요
+          # NSIM: "1000"
           R_ENVIRON_USER: ""
 
-      # 결과물 업로드: 루트/하위 폴더에서 흔히 쓰는 확장자와 SimulationResults 폴더 전체
       - name: Upload simulation artifacts
         uses: actions/upload-artifact@v4
         with:
