--- a/.github/workflows/srb.yml
+++ b/.github/workflows/srb.yml
@@ -1,12 +1,15 @@
 name: Run SexRatioBirth
 
 on:
-  workflow_dispatch:  # Actions 탭에서 수동 실행 버튼
+  workflow_dispatch:  # Actions 탭에서 수동 실행
 
 jobs:
   run-srb:
     runs-on: ubuntu-latest
     timeout-minutes: 60
+
+    env:
+      CRAN: https://cloud.r-project.org
 
     steps:
       - name: Checkout repository
@@ -15,31 +18,27 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.3.2'   # 필요 시 다른 버전으로 변경
+          r-version: '4.3.2'   # 필요시 변경
 
-      # 패키지 설치 (캐시 활용). Suggests(=Rmpi 등) 설치를 막아서 빌드 오류 방지
-      - name: Install R package dependencies (cached)
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          # 실제 사용하는 패키지만 적으세요. snowfall가 꼭 필요 없으면 빼는 걸 권장.
-          extra-packages: |
-            future.apply
-            matrixStats
-            data.table
-            qs
-          dependencies: "hard"   # Suggests 미설치
-          cache-version: 1
-        env:
-          PAK_INSTALL_SUGGESTS: "false"
+      - name: Show R session info
+        run: |
+          R -q -e 'sessionInfo()'
 
+      # pak 없이, 기본 CRAN 설치로 필요한 패키지만 설치
+      - name: Install CRAN packages
+        run: |
+          R -q -e 'install.packages(c("future.apply","matrixStats","data.table","qs"), repos=Sys.getenv("CRAN"))'
+
+      # 시뮬 실행
       - name: Run SexRatioBirth.R
         run: |
           Rscript SexRatioBirth.R
         env:
-          # 필요시 시뮬 파라미터를 환경변수로 전달해서 스크립트에서 읽게 할 수 있어요
+          # 필요하면 환경변수로 파라미터 전달 가능 (예시)
           # NSIM: "1000"
           R_ENVIRON_USER: ""
 
+      # 결과 업로드 (없어도 실패하지 않게 warn)
       - name: Upload simulation artifacts
         uses: actions/upload-artifact@v4
         with:
